# smart-turn

./: .gitignore  README.md  inference.py  pyproject.toml  record_and_predict.py  requirements.txt  train.py
coreml/: README.md
datasets/: generate_zh_CN_data.py
datasets/human_5_all/train/: data-00000-of-00001.arrow  dataset_info.json  state.json
datasets/rime_2/train/: data-00000-of-00001.arrow  dataset_info.json  state.json
onnx/: .gitignore  README.md  convert-torch-to-onnx.py  inference.py  record_and_predict.py  requirements.txt
quantization/: GUIDE.md  benchmark.py  quantize.py
